# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  06 June 2006; Roy Marples <uberlord@gentoo.org>:

    shutdown.sh now uses the INIT_HALT variable correctly, #135740
    thanks to Steve Moerk.

    start-stop-daemon now has PAM support, #64700 thanks to Scott Dial.

* baselayout-1.12.1 (05 Jun 2006)

  05 June 2006; Roy Marples <uberlord@gentoo.org>:

    Restore the man user/group, #113298 thanks to Chris Gianelloni.

    Fix typo in /sbin/rc, #135323 thanks to Ed Catmur.

    rc now stops services again, #135340.

    depscan.sh now tries to touch files in with future mtimes so that
    users only see the clock skew message once, #135212.

    Show help when rc-update is called without arguments, #133434.

    Ensure that an empty NET_FS_LIST doesn't cause localmount to error,
    #132928 thanks to Dominik Buerkle.
  
  02 June 2006; Roy Marples <uberlord@gentoo.org>:

    Allow LC_* and LANG vars through to runscript.sh by default.

    net.lo now comes after bootmisc, #135118 thanks to Oldrich Jedlicka.

    arping.sh now has MAC address support, #134253 thanks to Oldrich Jedlicka.

    pppd.sh now updates secret files with a blank password, #134337

    Remove swapon call from /sbin/rc as localmount already calls it,
    #47932 and also a partial fix for #134489

  30 May 2006; Roy Marples <uberlord@gentoo.org>:

    Allow users to specify netplugd options.

    Really fix is_xenU_sys, #134571 thanks to Stefan Hellermann.

  24 May 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that we call halt.sh in a new shell with LC_ALL=C so that we don't
    load any locale information which may stop us unmounting /usr, #128848
    and #133090.

    Don't set clock for OpenVZ systems, #133265 thanks to Kir Kolyshkin.

    Don't remount / in checkroot for unionfs /, #129975 thanks to Daniel.

    Don't stop net interfaces / is unionfs and a branch is network mounted.
