@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  12 June 2006; Roy Marples <uberlord@gentoo.org>:
+
+    We now have a Makefile to install our scripts.
+
   06 June 2006; Roy Marples <uberlord@gentoo.org>:
 
     shutdown.sh now uses the INIT_HALT variable correctly, #135740
